--- a/app/Resources/views/Home/index.html.twig
+++ b/app/Resources/views/Home/index.html.twig
@@ -18,6 +18,7 @@
                     <h3>Profilis <span class="glyphicon glyphicon-cog"></span></h3>
                     <a href="">Mano treniruociu programos</a>
                     <hr>
+                    <h1>hjh</h1>
                     <a href="">Mano treneriai</a>
                 </div>
                 <h3> Top 3 programos</h3>
@@ -35,7 +36,7 @@
                 </div>
             </div>
             <div class="col-sm-7 text-left">
-                <div class="searchBar">
+                <div class="searchBar nav navbar affix" data-spy="affix" data-offset-top="120">
                     <input type="text" placeholder="Pagal treneri" />
                     <select>
                         <option>1</option>
@@ -63,7 +64,7 @@
                 </div>
                 <hr>
             </div>
-            <div class="col-sm-2 sidenav">
+            <div class="col-sm-2 sideNav">
                 <h3> Top 3 treneriai</h3>
                 <div class="well">
                     <p>Kazkas1</p>
