--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a id="brand" class="navbar-brand name" href="#">Namu treneris</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 Meniu
             </button>
