--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -13,29 +13,31 @@
 {% block body %}
     <div class="container-fluid text-center">
         <div class="row content">
-            <div class="col-sm-3">
-                <div class="well">
-                    <h3>Profilis <span class="glyphicon glyphicon-cog"></span></h3>
-                    <a href="">Mano treniruociu programos</a>
-                    <hr>
-                    <a href="">Mano treneriai</a>
-                </div>
-                <h3> Top 3 programos</h3>
-                <div class="well">
-                    <p>Kazkas1</p>
-                    <a href=""> Susisiekite</a>
-                </div>
-                <div class="well">
-                    <p>Kazkas1</p>
-                    <a href=""> Susisiekite</a>
-                </div>
-                <div class="well">
-                    <p>Kazkas1</p>
-                    <a href=""> Susisiekite</a>
+            <div class="col-sm-3 sideNav">
+                <div class="fixed">
+                    <div class="profile">
+                        <h3>Profilis <span class="glyphicon glyphicon-cog"></span></h3>
+                        <a href="" class="actionLink">Mano treniruociu programos</a>
+                        <hr>
+                        <a href="" class="actionLink">Mano treneriai</a>
+                    </div>
+                    <h3> Top 3 programos</h3>
+                    <div class="profile">
+                        <p>Kazkas1</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
+                    <div class="profile">
+                        <p>Kazkas1</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
+                    <div class="profile">
+                        <p>Kazkas1</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-7 text-left">
-                <div class="searchBar">
+                <nav class="navbar navbar-inverse">
                     <input type="text" placeholder="Pagal treneri" />
                     <select>
                         <option>1</option>
@@ -45,37 +47,52 @@
                         <option>5</option>
                     </select>
                     <input type="submit" value="Ieskoti" />
-                </div>
-                <h1> Naujausios programos</h1>
+                </nav>
                 <hr>
                 <div class="program">
                     <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <a href=""> Daugiau informacijos</a>
-                    <a href=""> Pasiimti programa</a>
+                    <a href="" class="actionLink"> Daugiau informacijos</a>
+                    <a href="" class="actionLink"> Pasiimti programa</a>
                 </div>
                 <hr>
                 <div class="program">
                     <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <a href=""> Daugiau informacijos</a>
-                    <a href=""> Pasiimti programa</a>
+                    <a href="" class="actionLink"> Daugiau informacijos</a>
+                    <a href="" class="actionLink"> Pasiimti programa</a>
+                </div>
+                <hr>
+                <div class="program">
+                    <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <a href="" class="actionLink"> Daugiau informacijos</a>
+                    <a href="" class="actionLink"> Pasiimti programa</a>
+                </div>
+                <hr>
+                <div class="program">
+                    <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <a href="" class="actionLink"> Daugiau informacijos</a>
+                    <a href="" class="actionLink"> Pasiimti programa</a>
                 </div>
                 <hr>
             </div>
-            <div class="col-sm-2 sidenav">
-                <h3> Top 3 treneriai</h3>
-                <div class="well">
-                    <p>Kazkas1</p>
-                    <a href=""> Susisiekite</a>
-                </div>
-                <div class="well">
-                    <p>Kazkas2</p>
-                    <a href=""> Susisiekite</a>
-                </div>
-                <div class="well">
-                    <p>Kazkas3</p>
-                    <a href=""> Susisiekite</a>
+            <div class="col-sm-2">
+                <div class="fixed">
+                    <h3> Top 3 treneriai</h3>
+                    <div class="profile">
+                        <p>Kazkas1</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
+                    <div class="profile">
+                        <p>Kazkas2</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
+                    <div class="profile">
+                        <p>Kazkas3</p>
+                        <a href="" class="actionLink"> Susisiekite</a>
+                    </div>
                 </div>
             </div>
         </div>
