--- a/web/bodyStyle.css
+++ b/web/bodyStyle.css
@@ -21,4 +21,76 @@
 body
 {
     background-color: #e5fdff;
+    margin-top:75px;
+}
+
+.nav.affix {
+    position: fixed;
+    top: 50;
+    width:55%;
+}
+
+.fixed
+{
+    position: fixed;
+}
+
+
+.profile
+{
+    background-color: #47e2f4;
+    padding:20px;
+    border-radius:10px;
+    margin-bottom:15px;
+    box-shadow: 10px 10px 5px #2f6288;
+}
+
+.profile a
+{
+    color: #5c5c5c;
+    border:1px solid;
+    padding:10px;
+    background-color: #e6deff;
+    transition: 2s all;
+    border-radius: 15px;
+}
+
+.profile a:hover
+{
+    color:white;
+    background-color:black;
+}
+
+.actionLink
+{
+    color: #062725;
+    border:1px solid;
+    padding:10px;
+    background-color: #d9fff7;
+    transition: 2s all;
+    border-radius: 15px;
+    margin:15px;
+    transition: 2s all;
+}
+
+.actionLink:hover
+{
+    color: #808080;
+    background-color: #1af1e4;
+}
+
+h3
+{
+    margin-bottom:20px;
+    margin-top:0px;
+}
+
+.col-sm-3, .col-sm-7, .col-sm-2
+{
+    margin-top:25px;
+}
+
+.fixed
+{
+    position:fixed;
 }
