--- a/src/AppBundle/Resources/views/Home/createRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/createRegime.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {{ parent() }}
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
