Fixed layouts issue, program template changes

--- a/app/Resources/views/inc/left_column.html.twig
+++ b/app/Resources/views/inc/left_column.html.twig
@@ -1,3 +1,11 @@
-<div id="left_column">
-    left column
+<div class="col-sm-3 sideNav">
+    <div class="profile">
+        <nav>
+            <ul>
+                <li> <a href="">Treniruočių programos</a> </li>
+                <li> <a href="">Reitinguotos programos</a> </li>
+                <li> <a href="">Rodyti progresa</a> </li>
+            </ul>
+        </nav>
+    </div>
 </div>
