--- a/app/Resources/views/inc/right_column.html.twig
+++ b/app/Resources/views/inc/right_column.html.twig
@@ -1,3 +1,15 @@
-<div id="right_column">
-    right column
+<div class="col-sm-2">
+    <h3> Top 3 treneriai</h3>
+    <div class="profile">
+        <p>Kazkas1</p>
+        <a href="" class="actionLink"> Susisiekite</a>
+    </div>
+    <div class="profile">
+        <p>Kazkas2</p>
+        <a href="" class="actionLink"> Susisiekite</a>
+    </div>
+    <div class="profile">
+        <p>Kazkas3</p>
+        <a href="" class="actionLink"> Susisiekite</a>
+    </div>
 </div>
