--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,11 +18,23 @@
         {% block header %}
             {% include "::inc/header.html.twig" %}
         {% endblock %}
-        {% block body %}
-            {% include ':inc:left_column.html.twig' %}
-            {% include ':inc:right_column.html.twig' %}
-        {% endblock %}
+    <div class="container-fluid text-center">
+        <div class="row content">
+            {% block sideBarLeft %}
+                {% include "::inc/left_column.html.twig" %}
+            {% endblock %}
+            <div class="col-sm-7 text-left">
+                {% block body %}
+                {% endblock %}
+            </div>
+
+            {% block sideBarRight %}
+                {% include "::inc/right_column.html.twig" %}
+            {% endblock %}
+            
     {% endblock %}
+        </div>
+    </div>
 </div>
 {% block footer %}
 {% include "::inc/footer.html.twig" %}
