Updated queryRegime to show full information

--- a/src/AppBundle/Resources/views/Home/hotRegimes.html.twig
+++ b/src/AppBundle/Resources/views/Home/hotRegimes.html.twig
@@ -6,6 +6,6 @@
     {% for regime in regimes %}
         {{ regime.id }}
         {{ regime.title }}
-        {{ regime.describtion }} <br>
+        {{ regime.description }} <br>
     {% endfor %}
 {% endblock %}
