Create program form style

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('headerStyle.css') }}"/>
         <link rel="stylesheet" href="{{ asset('bodyStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('regimeFormStyle.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
