--- a/src/AppBundle/Resources/views/Home/browseUsers.html.twig
+++ b/src/AppBundle/Resources/views/Home/browseUsers.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
     {{ parent() }}
     <h1>Users list!</h1>
     {% for user in users %}
