--- a/src/AppBundle/Resources/views/Home/createRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/createRegime.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
     <form name="form" method="post">
         <div class="container" id="form">
             <h2 class="description"> Programos pavadinimas</h2>
