--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -14,7 +14,7 @@
     {{ parent() }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
         <nav class="searchNav">
             <div class="row">
                 <form>
