--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -1,6 +1,5 @@
 {% extends "::base.html.twig" %}
 
-{% block body %}
-    {{ parent() }}
+{% block content %}
     {% block fos_user_content %}{% endblock %}
 {% endblock %}
