--- a/src/AppBundle/Resources/views/Home/rateRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/rateRegime.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
     {{ parent() }}
     {{ form_start(form) }}
     {{ form_widget(form) }}
