--- a/src/AppBundle/Resources/views/Home/taskSuccess.html.twig
+++ b/src/AppBundle/Resources/views/Home/taskSuccess.html.twig
@@ -1,6 +1,6 @@
 {%  extends 'base.html.twig' %}
 
-{%  block body %}
+{%  block content %}
     {{ parent() }}
     <h1>Success!</h1>
 {% endblock %}
