--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -1,21 +1,3 @@
-    <form action="{{ path("fos_user_security_check") }}" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ fos_csrf_provider.generateCsrfToken('authenticate') }}" />
-        <label>Email</label>
-        <input type="text" name="_username" required="required" />
-
-        <label>Password</label>
-        <input type="password" name="_password" required="required" />
-
-        <button type="submit">Submit</button>
-    </form>
-{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-    {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-    <a href="{{ path('fos_user_security_logout') }}">
-        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-    </a>
-{% else %}
-    <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-{% endif %}
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -30,15 +12,23 @@
                 <li><a href="/about">Apie</a></li>
                 <li><a class="popup" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Registracija</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control loginInput" name="username" placeholder="Prisijungimo vardas">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control loginInput" name="password" placeholder="Slaptažodis" id="pass">
-                </div>
-                <button type="submit" class="btn btn-default">Prisijungti</button>
-            </form>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <form action="{{ path("fos_user_security_check") }}" method="post" class="navbar-form navbar-right">
+                    <input type="hidden" name="_csrf_token" value="{{ fos_csrf_provider.generateCsrfToken('authenticate') }}" />
+                    <div class="form-group">
+                        <input type="text" placeholder="Email" name="_username" class="form-control loginInput" required="required" />
+                    </div>
+                    <div class="form-group">
+                        <input placeholder="Slaptažodis" class="form-control loginInput" type="password" name="_password" required="required" />
+                    </div>
+                    <button class="btn btn-default" type="submit">Prisijungti</button>
+                </form>
+            {% endif %}
         </div>
     </div>
 </nav>
