Output from api /showRegimes to index page, added links to every regime

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,8 +41,11 @@
 {% include "::inc/footer.html.twig" %}
 {% endblock %}
 {% block javascripts %}
+    <script src="{{ asset('angular.min.js') }}"></script>
     <script src="{{ asset('jquery.min.js') }}"></script>
     <script src="{{ asset('bootstrap.min.js') }}"></script>
+    <script src="{{ asset('getJson.js') }}"></script>
+
 {% endblock %}
 {% endblock %}
 </html>
