--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -3,89 +3,41 @@
 {% block title %}Homepage - {{ parent() }}{% endblock %}
 
 {% block content %}
-    {% for regime in regimes %}
-        {{ regime.id }} <br>
-        {{ regime.title }} <br>
-        {{ regime.description }} <br><br>
-    {% endfor %}
-        <nav class="searchNav">
-            <div class="row">
-                <form>
-                    <div class="col-md-3">
-                        <input class="searchText" type="text" placeholder="Iveskite paieškos raktą" />
-                    </div>
-                    <div class="col-md-1">
-                        <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option selected="selected">3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
-                    </div>
-                    <div class="col-md-3">
-                        <input type="submit" value="Ieskoti" />
-                    </div>
-                </form>
-            </div>
-        </nav>
+    <nav class="searchNav">
+        <div class="row">
+            <form>
+                <div class="col-md-3">
+                    <input class="searchText" type="text" placeholder="Iveskite paieškos raktą" />
+                </div>
+                <div class="col-md-1">
+                    <select>
+                        <option>1</option>
+                        <option>2</option>
+                        <option selected="selected">3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <input type="submit" value="Ieskoti" />
+                </div>
+            </form>
+        </div>
+    </nav>
+    <div ng-app="regimeApp" ng-controller="regimesController">
         <hr>
-        <div class="program row">
-            <h2> <span class="programName">Programos pavadinimas</span> <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
+        <div class="program row" ng-repeat="regime in regimes">
+            <h2> <span class="programName">{[{ regime.title }]}</span> <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p> {[{ regime.description }]}</p>
             <div class="row buttonRow">
                 <div class="col-md-12">
-                    <a href="" class="actionLink col-md-4"> Daugiau informacijos</a>
-                    <a href="" class="actionLink col-md-4"> Aktyvuoti programa</a>
-                    <a href="" class="actionLink col-md-4"> Komentuoti</a>
+                    <a href="regimes/{[{ regime.id }]}" class="actionLink col-md-4"> Daugiau informacijos</a>
+                    <a href="activate/{[{ regime.id }]}" class="actionLink col-md-4"> Aktyvuoti programa</a>
+                    <a href="comment/{[{ regime.id }]}" class="actionLink col-md-4"> Komentuoti</a>
                 </div>
             </div>
         </div>
         <hr>
-        <div class="program row">
-            <div class="header">
-                <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
-            </div>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="row buttonRow">
-                <div class="col-md-12">
-                    <a href="" class="actionLink col-md-4"> Daugiau informacijos</a>
-                    <a href="" class="actionLink col-md-4"> Aktyvuoti programa</a>
-                    <a href="" class="actionLink col-md-4"> Komentuoti</a>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="program row">
-            <div class="header">
-                <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
-            </div>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="row buttonRow">
-                <div class="col-md-12">
-                    <a href="" class="actionLink col-md-4"> Daugiau informacijos</a>
-                    <a href="" class="actionLink col-md-4"> Aktyvuoti programa</a>
-                    <a href="" class="actionLink col-md-4"> Komentuoti</a>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="program row">
-            <div class="header">
-                <h2>Programos pavadinimas <span class="coachInfo"> Treneris: <a href=""> Vardas/Pavarde </a></span> </h2>
-            </div>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="row buttonRow">
-                <div class="col-md-12">
-                    <a href="" class="actionLink col-md-4"> Daugiau informacijos</a>
-                    <a href="" class="actionLink col-md-4"> Aktyvuoti programa</a>
-                    <a href="" class="actionLink col-md-4"> Komentuoti</a>
-                </div>
-            </div>
-        </div>
-        <hr>
+    </div>
 {% endblock %}
