--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.ico')}}">
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('headerStyle.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('bodyStyle.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('regimeFormStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/headerStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/bodyStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/regimeFormStyle.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
@@ -41,10 +41,10 @@
 {% include "::inc/footer.html.twig" %}
 {% endblock %}
 {% block javascripts %}
-    <script src="{{ asset('angular.min.js') }}"></script>
-    <script src="{{ asset('jquery.min.js') }}"></script>
-    <script src="{{ asset('bootstrap.min.js') }}"></script>
-    <script src="{{ asset('getJson.js') }}"></script>
+    <script src="{{ asset('assets/angular.min.js') }}"></script>
+    <script src="{{ asset('assets/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/getJson.js') }}"></script>
 
 {% endblock %}
 {% endblock %}
