--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/headerStyle.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/bodyStyle.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('css/regimeFormStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/regimeInputFormStyle.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('fonts/glyphicons-haflings-regular.ttf') }}">
+        <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
+        <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}">
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
