--- a/app/Resources/views/inc/right_column.html.twig
+++ b/app/Resources/views/inc/right_column.html.twig
@@ -1,15 +1,20 @@
 <div class="col-sm-2">
-    <h3> Top 3 treneriai</h3>
-    <div class="profile">
-        <p>Kazkas1</p>
-        <a href="" class="actionLink"> Susisiekite</a>
-    </div>
-    <div class="profile">
-        <p>Kazkas2</p>
-        <a href="" class="actionLink"> Susisiekite</a>
-    </div>
-    <div class="profile">
-        <p>Kazkas3</p>
-        <a href="" class="actionLink"> Susisiekite</a>
+    <div class="sideNav">
+        <h2 class="info"> TOP TRENERIAI</h2>
+        <div class="profile">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/showProfile"> Nick</a>
+                    </li>
+                    <li>
+                        <a href="/showProfile"> Nick</a>
+                    </li>
+                    <li>
+                        <a href="/showProfile"> Nick</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
