Regime and Comments updates, sending Json, saving subcomments

--- a/src/AppBundle/Resources/views/Home/queryRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryRegime.html.twig
@@ -41,4 +41,9 @@
             </div>
         {% endfor %}
     </div>
+    {% if app.user is not null %}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
+        {% endif %}
 {% endblock %}
